src/objects/Equipment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Equipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExteriorImage__c</fullName>
        <formula>Model__r.ExteriorImage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>外観イメージ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InspectionDueDateExcess__c</fullName>
        <formula>NextInspectionDueDate__c  &lt;  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>点検期限超過</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastInspectionDateTime__c</fullName>
        <label>最終点検日時</label>
        <summarizedField>Inspection__c.InspectionDateTime__c</summarizedField>
        <summaryFilterItems>
            <field>Inspection__c.Completion__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection__c.Equipment__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>施設種別</label>
        <referenceTo>Model__c</referenceTo>
        <relationshipLabel>点検施設</relationshipLabel>
        <relationshipName>Equipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NextInspectionDueDate__c</fullName>
        <formula>LastInspectionDateTime__c  +  Model__r.CheckSpan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>次回点検期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QRCode__c</fullName>
        <formula>IMAGE(
 &apos;http://chart.apis.google.com/chart?cht=qr&amp;chs=100x100&amp;chl=&apos;+ Id , 
 &apos;QRコード&apos;,
 100,
 100
)</formula>
        <label>施設QRコード</label>
        <type>Text</type>
    </fields>
    <label>点検施設</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>QRCode__c</columns>
        <columns>Model__c</columns>
        <columns>ExteriorImage__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>施設-{0000}</displayFormat>
        <label>施設番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>点検施設</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>